not sure if all of it got added

--- a/code/index.html
+++ b/code/index.html
@@ -11,14 +11,16 @@
   <body>
     
     <header class="header">
+      <!--Add header child for logo and title set to 50%-->
+      <img class="logo" src="\assets\logonew.png" alt="Header Logo">
+      <h1 class="header-title">SNEAKERS & NEWS</h1>
+      <!---add header child for -->
       <div class="mobile-hamburger">
           <div></div>
           <div></div>
           <div></div>
           <div></div>
       </div>
-      <img class="logo" src="\assets\logonew.png" alt="Header Logo">
-      <h1>SNEAKERS & NEWS</h1>
       <nav class="navigation">
           <a href="#">News</a>
           <a href="#">Where to buy</a>
@@ -26,7 +28,7 @@
       </nav>
   </header>
 
-  
+ 
   <section class="big-news-container">
     <section class="container">
       <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021">
@@ -34,7 +36,7 @@
       </a>
       <div>
           <h1>Fresh Out the Box</h1>
-          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways ofblack/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
+          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways of black/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
           </p>
       </div>
     </section>
@@ -42,20 +44,22 @@
   
   <section class="small-news-container"> <!--Contain only cards-->
     <section class="container">
-      <h3>Release Radar</h3>
-      <p>
-          The hottest release news. </br>
-          Just for you!
-      </p>
+      <div>
+        <h2>Release Radar</h2>
+        <p>
+            The hottest release news. </br>
+            Just for you!
+        </p>
+      </div>  
   
-      <section class="small-news">
+      <section class="small-news"> <!---Card contaner then-->
         <a href="https://news.nike.com/content/converse-x-concepts-southern-flame-all-star-bb-evo-and-chuck-70">
-              <img src="\assets\Converse_x_CONCEPTS_Chuck_70_2_native_1600.jpg" alt="Converse Chuck 70">
-              <h4>Converse x CONCEPTS</h4>
-              <p>
+            <img src="\assets\Converse_x_CONCEPTS_Chuck_70_2_native_1600.jpg" alt="Converse Chuck 70">
+            <h4>Converse x CONCEPTS</h4>
+            <p>
               <i>2021, January 14</i> - Converse and CONCEPTS take their collaboration to a whole new level with a "peach basket" theme. The colab honors 130 years of basketball history.
-              </p>
-        </a>
+            </p>
+            </a>
         <a href="https://news.nike.com/content/nike-x-cpfm-swarovski-dunk-low">
               <img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="Converse Chuck 70">
               <h4>Shine Some Light on the Nike Dunk</h4>
@@ -71,11 +75,11 @@
               </p>
         </a>
           <a href="https://news.nike.com/content/nike-sportswear-pack-air-force-1-air-max-98-lx-official-images">
-            <img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
-            <h4>Rip it & Tear it Unique</h4>
-            <p>
-            <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
-            </p>
+              <img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
+              <h4>Rip it & Tear it Unique</h4>
+              <p>
+              <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
+              </p>
           </a>
       </section>
     </section>
