--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <meta charset="utf-8" name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
 
@@ -30,7 +34,7 @@
         <div>
           <h1>Front End Ninja 🥷🏻</h1>
         </div>
-        <div class="hamburger">
+        <div class="hamburger dropdown-menu">
           <div></div>
           <div></div>
           <div></div>
