Fixed some form issues in different devices

--- a/code/login.html
+++ b/code/login.html
@@ -26,14 +26,14 @@
 
 <section class="form-section">
   <form class="form">
-    <h2>LOGIN</h2>
-    <h3>Don't got an account?</h3> <a href="signup.html">Sign up!</a><br><br><br>
-    <label for="username">Username:</label><br>
+    <div class="form-row"><h2>LOGIN</h2>
+    <h3>Don't got an account? <br><a href="signup.html">Sign up!</a></h3><br><br><br> </div>
+    <div class="form-row"><label for="username">Username:</label><br>
     <input type="text" id="username" name="username" placeholder="Your username" required><br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password" placeholder="Your password" minlength="8" maxlength="12"
       required><br>
-    <input type="submit" value="Login">
+    <input type="submit" value="Login"></div>
   </form>
 </section>
 
