--- a/code/signup.html
+++ b/code/signup.html
@@ -26,20 +26,24 @@
 
 <section class="form-section">
     <form class="form">
-        <h2>SIGN UP!</h2>
-        <h3> With a login you will be able to comstumize content and notifications.</h3><br><br><br>
-        <label for="first_name">First name:</label><br>
-        <input type="text" id="first_name" name="first_name" placeholder="Lance" required><br>
-        <label for="last_name">Last name:</label><br>
-        <input type="text" id="last_name" name="last_name" placeholder="Armstrong" required><br>
-        <label for="email">E-mail:</label><br>
-        <input type="email" id="email" name="email" placeholder="example@example.com" required><br><br>
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" placeholder="Choose a username" required><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" placeholder="Choose a password" minlength="8"
-            maxlength="12" required><br>
-        <input type="submit" value="Sign Up">
+       <div class="form-row">
+            <h2>SIGN UP!</h2>
+            <h3> With a login you will be able to comstumize content and notifications.</h3>
+        </div>
+        <div class="form-row"><label for="first_name">First name:</label><br>
+            <input type="text" id="first_name" name="first_name" placeholder="Lance" required><br>
+            <label for="last_name">Last name:</label><br>
+            <input type="text" id="last_name" name="last_name" placeholder="Armstrong" required><br>
+            <label for="email">E-mail:</label><br>
+            <input type="email" id="email" name="email" placeholder="example@example.com" required>
+        </div>
+        <div class="form-row"><label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" placeholder="Choose a username" required><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" placeholder="Choose a password" minlength="8"
+                maxlength="12" required><br><br><br>
+            <input type="submit" value="Sign Up">
+        </div>
     </form>
 </section>
 
