added some classes in the small news article

--- a/code/index.html
+++ b/code/index.html
@@ -23,10 +23,12 @@
     <section class="big-news-container">
       <article>
         <h2>Rubrik</h2>
+        <div class="big-news-children">
         <div class="img-container-one">
           <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
         </div>
-        <p>Liten beskrivning av nyheten</p>
+        <p class="big-news-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
       </article>
     </section>
 
@@ -34,23 +36,23 @@
     <section class="small-news-container">
        
       <article class="small-news">
-        <h3>Rubrik</h3>
-        <img src="./Taj-mahal.jpg" alt="Picture of Taj-mahal" width="">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="image-container-two" src="./Taj-mahal.jpg" alt="Picture of Taj-mahal" width="300px">
       </article>
 
       <article class="small-news">
-        <h3>Rubrik</h3>
-        <img src="bildlänk" alt="Bild" width="">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="image-container-two" src="./Fish.jpg" alt="Picture of fishes" width="300px">
+        </article>
+
+      <article class="small-news">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="image-container-two" src="./Argentina.jpg" alt="Picture of Argentinas flag" width="300px">
       </article>
 
       <article class="small-news">
-        <h3>Rubrik</h3>
-        <img src="bildlänk" alt="Bild" width="">
-      </article>
-
-      <article class="small-news">
-        <h3>Rubrik</h3>
-        <img src="bildlänk" alt="Bild" width="">
+        <h3 class="title-three">Rubrik</h3>
+        <img class="image-container-two" src="./Elephants.jpg" alt="Picture of elephants" width="300px">
       </article>
     </section>
   </body>
