Adjusting header containers images in one, nav/hamgurger in the other

--- a/code/index.html
+++ b/code/index.html
@@ -14,24 +14,25 @@
       </style>
   </head>
 
-  <body>
-    
+  <body class="container">
     <header class="header container">
-      <div class="hamburger">
+      <div class="header-child">
+        <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
+        <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
+      </div>  
+      <div class="header-child">    
+      <nav class="desktop-menu">
+        <a class="navigation-element" href="#">News</a>
+        <a class="navigation-element" href="#">Find A Rescue</a>
+        <a class="navigation-element" href="#">About Us</a>
+        <a class="navigation-element" href="#">Shop</a>
+      </nav>
+      <div class="mobile-menu">
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div>
-        <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
-        <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
-      </div>      
-      <nav>
-        <a class="navigation-element" href="#">Topics</a>
-        <a class="navigation-element" href="#">Rescues</a>
-        <a class="navigation-element" href="#">About Us</a>
-        <a class="navigation-element" href="#">Shop</a>
-      </nav>
+      </div>
     </header>
 
     <section class="big-news">
