--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>The Leaflet</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
   </header>
 
   <section class="big-news">
-    <img src="tea0.jpg" alt="">
+    <img src="./tea0.jpg" alt="">
     <div class="big-news-text">
       <h2>Green Tea Among Top Wellness Habits as Result of COVID-19</h2>
       <article>
@@ -45,35 +45,35 @@
   <div class="border"></div>
   <section class="small-news">
     <div>
-      <img src="tea1.jpg" alt="">
+      <img src="./tea1.jpg" alt="">
       <h3>5 Flavor & Trend Predictions for 2021</h3>
     </div>
     <div>
-      <img src="tea2.jpg" alt="">
+      <img src="./tea2.jpg" alt="">
       <h3>Celebrate! January Is National Hot Tea Month</h3>
     </div>
     <div>
-      <img src="tea3.jpg" alt="">
+      <img src="./tea3.jpg" alt="">
       <h3>Tea Experts Discuss the Most Important Industry Issues</h3>
     </div>
     <div>
-      <img src="tea4.jpg" alt="">
+      <img src="./tea4.jpg" alt="">
       <h3>Hope, Inspiration & Connection: How a Small Tea Business Can Shine</h3>
     </div>
     <div>
-      <img src="tea5.jpg" alt="">
+      <img src="./tea5.jpg" alt="">
       <h3>The Tea Council of the USA Launches 5th Annual Photo-Sharing Campaign</h3>
     </div>
     <div>
-      <img src="tea6.jpg" alt="">
+      <img src="./tea6.jpg" alt="">
       <h3>Chanoyu, a Japanese Matcha Tea Ceremony</h3>
     </div>
     <div>
-      <img src="tea7.jpg" alt="">
+      <img src="./tea7.jpg" alt="">
       <h3>How Starting a Tea Ritual Can Encourage Mindfulness and Elevate One’s Self-Care Routine</h3>
     </div>
     <div>
-      <img src="tea8.jpg" alt="">
+      <img src="./tea8.jpg" alt="">
       <h3>5 Tea Gifts for Valentine’s Day</h3>
     </div>
   </section>
