add comments to HTML and CSS

--- a/code/index.html
+++ b/code/index.html
@@ -99,8 +99,9 @@
       </div>
     </section>
   </main>
+  <!-- credit to designer -->
   <footer class="footer">
-    <div class="author-container">
+    <div class="credit-container">
       <p>Icons made by </p>
       <a href="https://www.freepik.com" title="Freepik">Freepik</a>
       <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
