--- a/code/index.html
+++ b/code/index.html
@@ -48,8 +48,7 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut eligendi,
         rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
         <br>
-        <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque nobis quas rerum. Eligendi quo vero,
-        iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.<br><br>
+        <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br>
         <a href="https://www.nasa.gov/" target="blank">&gt; Keep reading &lt;</a>
       </p>
     </container>
@@ -64,7 +63,7 @@
     </div>
     <div class="grid-wrapper">
       <h3>NASA test-fires SLS engines</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br><br>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
         <a href="a" target="blank">More -&gt;</a>
       </p>
     </div>
@@ -75,7 +74,7 @@
     </div>
     <div class="grid-wrapper">
       <h3>Astronaut William Thornton dead</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br><br>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
         <a href="b" target="blank">More -&gt;</a>
       </p>
     </div>
@@ -87,7 +86,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><br><a href="c" target="blank">More
+        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="c" target="blank">More
           -&gt;</a>
       </p>
     </div>
@@ -99,7 +98,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat <br><br><a href="d" target="blank">More -&gt;</a>
+        eligendi, rerum placeat <br><a href="d" target="blank">More -&gt;</a>
       </p>
     </div>
     <div class="grid-wrapper">
@@ -110,7 +109,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><br><a href="e" target="blank">More -&gt;</a>
+        eligendi, rerum placeat, quibusdam <br><a href="e" target="blank">More -&gt;</a>
       </p>
     </div>
     <div class="grid-wrapper">
@@ -121,7 +120,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><br><a href="f" target="blank">More -&gt;</a>
+        eligendi, rerum placeat, quibusdam <br><a href="f" target="blank">More -&gt;</a>
       </p>
     </div>
     <div class="grid-wrapper">
@@ -131,7 +130,7 @@
     </div>
     <div class="grid-wrapper">
       <h3>NASA test-fires SLS engines</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br><br>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
         <a href="g" target="blank">More -&gt;</a>
       </p>
     </div>
@@ -142,7 +141,7 @@
     </div>
     <div class="grid-wrapper">
       <h3>Astronaut William Thornton dead</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br><br>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
         <a href="h" target="blank">More -&gt;</a>
       </p>
     </div>
@@ -154,7 +153,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><br><a href="i" target="blank">More
+        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="i" target="blank">More
           -&gt;</a>
       </p>
     </div>
@@ -166,7 +165,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat <br><br><a href="j" target="blank">More -&gt;</a>
+        eligendi, rerum placeat <br><a href="j" target="blank">More -&gt;</a>
       </p>
     </div>
     <div class="grid-wrapper">
@@ -176,7 +175,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><br><a href="k" target="blank">More -&gt;</a>
+        eligendi, rerum placeat, quibusdam <br><a href="k" target="blank">More -&gt;</a>
       </p>
     </div>
     <div class="grid-wrapper">
@@ -186,7 +185,7 @@
     <div class="grid-wrapper">
       <h3>Small news</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam <br><br><a href="l" target="blank">More -&gt;</a>
+        eligendi, rerum placeat, quibusdam <br><a href="l" target="blank">More -&gt;</a>
       </p>
       <a class="top-button" href="#top">^<br>^</a>
   </section>
