Changed the header

--- a/code/index.html
+++ b/code/index.html
@@ -9,21 +9,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
-  <title>My projects</title>
+  <title>Travel magazine</title>
 </head>
 <body>
   <header class="header">
-    <img class="logo" src="logo.png" alt="website-logo">
-    <nav class="nav-container">
-      <a class="nav-item" href="">HOME</a>
-      <a class="nav-item" href="">DESTINATIONS</a>
-      <a class="nav-item" href="">CULTURE</a>
-      <a class="nav-item" href="">TRICKS & TIPS</a>
-    </nav>
+    <div>
+      <img class="logo" src="logo.png" alt="logo">
+    </div>
+    <div class="nav">
+        <nav class="nav-elements">
+          <a class="nav-el" href="">HOME</a>
+          <a class="nav-el" href="">DESTINATIONS</a>
+          <a class="nav-el" href="">CULTURE</a>
+          <a class="nav-el" href="">TRICKS & TIPS</a>
+        </nav>
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+    </div>
   </header>
 
   <section class="big-news">
-    <img src="images/camper.jpg" alt="">
+    <img src="images/camper.jpg" alt="camper">
     <div class="big-news-text">
     <h1>2020 was the year of the campervan</h1>
     <p>2020 was the year of the campervan – but could 2021 be even busier, as people now see them as 'the safe way to travel'?</p>
@@ -35,25 +44,25 @@
 
   <section class="news-card-section">  
     <div class="news-card">
-      <img src="images/photo.jpg" alt="">
+      <img src="images/photo.jpg" alt="man-with-camera">
       <h2>Winners of 2020's Travel Photo of the Year Awards</h2>
     </div>
-    <div class="news-card"><img src="images/airport.jpg" alt="">
+    <div class="news-card"><img src="images/airport.jpg" alt="airport">
       <h2>'I've Missed My Flight!' Here's what To Do</h2>
     </div>
-    <div class="news-card"><img src="images/freedom.jpg" alt="">
+    <div class="news-card"><img src="images/freedom.jpg" alt="two-girls">
       <h2>The Reality of the American Dream by travel blogger Kelly Clark</h2>
     </div>
-    <div class="news-card"><img src="images/mountains.jpg" alt="">
+    <div class="news-card"><img src="images/mountains.jpg" alt="girl-and-mountains">
       <h2>The 12 most beautiful mountains in the world</h2>
     </div>
-    <div class="news-card"><img src="images/plane.jpg" alt="">
+    <div class="news-card"><img src="images/plane.jpg" alt="plane">
       <h2>How to Book the Cheapest Flight Possible to Anywhere</h2>
     </div>
-    <div class="news-card"><img src="images/boys.jpg" alt="">
+    <div class="news-card"><img src="images/boys.jpg" alt="two-boys">
       <h2>The improbable rise and fall of Couchsurfing</h2>
     </div>
-    <div class="news-card"><img src="images/santorini.jpg" alt="">
+    <div class="news-card"><img src="images/santorini.jpg" alt="santorini">
       <h2>Greece Travel Info & Tips: All you need to know</h2>
     </div>
   </section>
