Added links and icons to footer, made it responsive)

--- a/index.html
+++ b/index.html
@@ -90,9 +90,18 @@
       <a href="#top"><i class="fas fa-chevron-up"></i></a>
     </div>
 
-    <footer>
-      <p>&copy; Julia Ros 2021</p>
-    </footer>
+    <footer>  
+      <div class="info">
+        <a href="">ABOUT</a>
+        <a href="">CONTACT</a>
+        <a href="">ADVERTISE</a>
+        <div class="icons">
+          <a href=""><i class="fab fa-facebook"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </footer> 
 
   </body>
 </html>
