Final projec version

--- a/code/index.html
+++ b/code/index.html
@@ -70,24 +70,33 @@
       </section>
     <!--Highlights section-->
       <section class="highlights-section">
-        
         <div class="container">
-          <h1> Trending now</h1>
+          <h1 class="big-headline">Trending now</h1>
           <div class="grid-container">
-            <div class="each-highlight highlight1"> Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
-            <div class="each-highlight highlight2">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
-            <div class="each-highlight highlight3">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
-            <div class="each-highlight highlight4">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
+            <a href="" class="each-highlight highlight1"> 
+              <h3 class="highlight-headline">Climate adaptation and reindeer husbandry</h3>
+              <p class="highlight-credits">Photo by Lynn Smith from Pexels</p>
+            </a>
+            <a href="" class="each-highlight highlight2">
+              <h3 class="highlight-headline">Biodiversity is rapidly decreasing due to loss of Arctic habitat</h3>
+              <p class="highlight-credits">Photo by Photo by Jonatan Pie from Pexels</p>
+            </a>
+            <a href="" class="each-highlight highlight3">
+              <h3 class="highlight-headline">Microplastics remain serios threat to Arctic environment</h3>
+              <p class="highlight-credits">Photo by Brian Yurasits on Unsplash</p>
+            </a>
+            <a href="" class="each-highlight highlight4">
+              <h3 class="highlight-headline">Oil and gas industry looks at opportinties in the Arctic</h3>
+              <p class="highlight-credits">Photo by Ksenia Kudelkina on Unsplash</p>
+            </a>
 
           </div>
         </div>
-
       </section>
     <!-- The other news section -->
       <section class="ordinary-news"> 
         <div class="container">
-          <h1>News</h1>
-
+          <h1 class="big-headline">News</h1>
           <div class="news">
             <a href="" class="each-news">
               <img src="./arctic_city.jpg" class="ordinarynews-image" alt="Arctic city">
@@ -108,9 +117,12 @@
           </div>
         </div>
       </section>
+    
+    <!-- Footer -->
     <footer>
-       <!-- Footer links and social media -->
+
       <div class="footer-general">
+        <!-- Footer links and social media -->
         <div class="footer-column">
           <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
           <div class="somedia-buttons">
@@ -121,6 +133,7 @@
           </div>
           <a class="subscribe-button">Subscribe to our newsletter</a>
         </div> 
+        <!-- Footer About Us -->
         <div class="footer-column">
           <h4 class="footer-headline">About us</h4>
           <div class="footer-list">
@@ -130,6 +143,7 @@
             <a class="footer-link" href="">Coockies</a>
           </div>
         </div>
+        <!-- Footer Explore Arctic News -->
         <div class="footer-column">
         <h4 class="footer-headline">Explore Arctic News</h4>
         <div class="footer-list">
