put images in a folder

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="nav">
       <div class="navigation-container-logo">
-        <img class="logo" src="./news.svg" alt="logo">
+        <img class="logo" src="./images/news.svg" alt="logo">
       </div>
       <div class="navigation-container">
         <a class="nav-item" href="#">GOOD NEWS</a>
@@ -29,7 +29,7 @@
     <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
-        <img class="img" src="./gaming.jpg" alt="gaming control">
+        <img class="img" src="./images/gaming.jpg" alt="gaming control">
       </div>
       <div class="big-news-text">
         <p>ART & LEISURE, 20 JAN 2021</p>
@@ -44,23 +44,23 @@
         </div>
         <div class="news-card-container">
           <div class="news-card">
-            <img class="img" src="./energy.jpg" alt="">
+            <img class="img" src="./images/energy.jpg" alt="">
             <h2>More Renewable Energy Used in 2020 Than Fossil Fuels For the First Time in World’s 4th Largest Economy
             </h2>
             <p>WORLD, JAN 18 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./walking.jpg" alt="">
+            <img class="img" src="./images/walking.jpg" alt="">
             <h2>Just Go Walk: Studies Show Normal Walking Can Add Years to Your Life and Reduce Disease Symptoms</h2>
             <p>HEALTH, JAN 18, 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./irland.jpg" alt="">
+            <img class="img" src="./images/irland.jpg" alt="">
             <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
             <p>ART & LEUSURE JAN 15 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./turtle.jpg" alt="">
+            <img class="img" src="./images/turtle.jpg" alt="">
             <h2>The Last Known Swinhoe’s Turtle on Earth Was Alone Until This Female Was Found – Researchers Hope for
               Babies</h2>
             <p>ANIMALS, JAN 16 2021</p>
@@ -75,23 +75,23 @@
         </div>
         <div class="news-card-container">
           <div class="news-card">
-            <img class="img" src="./car.jpg" alt="">
+            <img class="img" src="./images/car.jpg" alt="">
             <h2>New Electric Car Batteries Can Fully-Charge in 5 Minutes, Like Filling Your Car With Gas, If Better
               Chargers Are in Place</h2>
             <p>BUSINESS, JAN 10 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./snow.jpg" alt="">
+            <img class="img" src="./images/snow.jpg" alt="">
             <h2>The Mind-Blowing Mathematics of Snowflakes</h2>
             <p>SCIENCE, JAN 11 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./snake.jpg" alt="">
+            <img class="img" src="./images/snake.jpg" alt="">
             <h2>Top 10 Species Discovered in 2020 Include a Harry Potter Snake and Desert-Dwelling Broccoli</h2>
             <p>ANIMALS, DEC 17 2020</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./space.jpg" alt="">
+            <img class="img" src="./images/space.jpg" alt="">
             <h2>There Are 300 Million Potentially Habitable Planets in the Milky Way, NASA Reports</h2>
             <p>SCIENCE, DEC 27 2020</p>
           </div>
