--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
         <h2 class="headline-h2">Cloud Cover Expected Today!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum corrupti quas rem perspiciatis vero dolor, sed
           voluptates suscipit. <span class="view-more">
-            Read More
+            View More
           </span></p>
       </div>
     </div>
@@ -54,7 +54,6 @@
   <!-- SECTION - MEDIUM NEWS -->
   <section class="medium-news">
     <h2>HIGHLIGHTS</h2>
-
     <!-- MEDIUM NEWS - CARDS -->
     <div class="med-container">
       <div class="medium-news-card">
@@ -74,7 +73,6 @@
         <button class="card-btn"> Snow</button>
       </div>
     </div>
-
   </section>
 
   <!--  SECTION - SMALL NEWS -->
@@ -107,7 +105,6 @@
         <img class="card-gif" src="https://media.giphy.com/media/kn2GtngXJ3hZu/giphy.gif" alt="gif">
       </div>
     </div>
-
   </section>
 
   <footer class="footer">
